--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.progressoft.birx.domino</groupId>
+  <groupId>com.progressoft.brix.domino</groupId>
   <artifactId>gwt-i18n</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -97,6 +97,5 @@
   </build>
   <modules>
     <module>gwt-i18n-client</module>
-    <module>gwt-i18n-server</module>
   </modules>
 </project>
